samples/_failures_safe/1761268625_9e721e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4c41b7d.c: In function ‘print_entries_by_level’:
./samples/SAFE/__tmp_d4c41b7d.c:134:12: error: missing terminating " character
  134 |     printf("\nEntries with level %s
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d4c41b7d.c:134:5: error: expected expression at end of input
  134 |     printf("\nEntries with level %s
      |     ^~~~~~
./samples/SAFE/__tmp_d4c41b7d.c:134:5: error: expected declaration or statement at end of input
